<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/basic_margin"
    tools:context=".search.view.SearchActivity">

    <ImageButton
        android:id="@+id/back_button"
        style="@style/BackButtonStyle"
        android:onClick="backToMain"
        app:layout_constraintEnd_toStartOf="@id/search_text_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_text_input_layout"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="55dp"
        android:hint="@string/search_hint"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/search_button"
        app:layout_constraintStart_toEndOf="@id/back_button"
        app:layout_constraintBottom_toTopOf="@id/search_setting_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/search_button"
        style="@style/IconButtonStyle"
        android:foreground="@drawable/ic_search_24px"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/search_text_input_layout" />

    <LinearLayout
        android:id="@+id/search_setting_layout"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/basic_margin"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_text_input_layout">

        <Button
            android:id="@+id/group_search_setting_button"
            style="@style/ButtonStyle"
            android:onClick="bringUpGroupSearchSetting"
            android:text="@string/group" />

        <Button
            android:id="@+id/done_repeat_search_setting_button"
            style="@style/ButtonStyle"
            android:onClick="bringUpDoneRepeatSearchSetting"
            android:text="@string/done_repeat" />

        <Button
            android:id="@+id/period_search_setting_button"
            style="@style/ButtonStyle"
            android:onClick="bringUpPeriodSearchSetting"
            android:text="@string/period" />

        <Button
            android:id="@+id/distance_search_setting_button"
            style="@style/ButtonStyle"
            android:onClick="bringUpDistanceSearchSetting"
            android:text="@string/distance" />

        <ImageButton
            android:id="@+id/revert_search_setting_button"
            android:layout_width="@dimen/button_height"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/button_margin"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:foreground="@drawable/ic_replay_24px" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

