<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    tools:context=".detail.view.activityDetail">

    <ImageButton
        android:id="@+id/back_button"
        style="@style/DetailButtonStyle"
        android:foreground="?attr/homeAsUpIndicator"
        android:onClick="backToMain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/search_button"
        android:foreground="@drawable/bt_edit"
        style="@style/DetailButtonStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />





    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_button">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:descendantFocusability="blocksDescendants"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent">

            <LinearLayout
                android:id="@+id/itemArea"
                style="@style/DetailListStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_list_thick_height"
                android:background="@drawable/layout_bar"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/GroupArea"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent">

                <ImageView
                    android:id="@+id/important"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginRight="10dp"/>

                <TextView
                    android:id="@+id/itemName"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="프로그래머스_정렬 문제 풀기" />
            </LinearLayout>


            <RelativeLayout
                android:id="@+id/GroupArea"
                style="@style/DetailListStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_list_thick_height"
                android:background="@drawable/layout_bar"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/dateArea"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/itemArea">

                <TextView
                    style="@style/DetailTitleStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/group" />

                <ImageView
                    android:id="@+id/groupColor"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_alignLeft="@id/groupName"
                    android:layout_gravity="center_vertical"
                    android:visibility="visible"
                    android:src="@drawable/group_color"/>

                <TextView
                    android:id="@+id/groupName"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:gravity="center_vertical"
                    android:paddingLeft="25dp"
                    android:text="취업준비" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/dateArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_bar"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/dateArea"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/itemArea">


                <RelativeLayout
                    android:id="@+id/startDateArea"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/detail_list_thick_height"
                    android:background="@drawable/layout_border"
                    style="@style/DetailListStyle">
                    <TextView
                        style="@style/DetailTitleStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/start_date" />

                    <TextView
                        android:id="@+id/startDate"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:gravity="center_vertical"
                        android:text="2020-01-31" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/endDateArea"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/detail_list_thick_height"
                    android:background="@drawable/layout_border"
                    style="@style/DetailListStyle">

                    <TextView
                        style="@style/DetailTitleStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/end_date" />

                    <TextView
                        android:id="@+id/endDate"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:gravity="center_vertical"
                        android:text="2020-01-31" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/doneDateArea"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/detail_list_thick_height"
                    android:background="@drawable/layout_border"
                    style="@style/DetailListStyle">

                    <TextView
                        style="@style/DetailTitleStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/done_date" />

                    <TextView
                        android:id="@+id/doneDate"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:gravity="center_vertical"
                        android:text="2020-01-31" />

                </RelativeLayout>

                <RelativeLayout
                    style="@style/DetailListStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/detail_list_thick_height"
                    android:background="@drawable/layout_border">

                    <TextView
                        style="@style/DetailTitleStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/roof" />

                    <TextView
                        android:id="@+id/roof"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:gravity="center_vertical"
                        android:text="2020-01-31" />

                </RelativeLayout>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/achievementRateArea"
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:background="@drawable/layout_bar"
                style="@style/DetailListStyle"
                app:layout_constraintTop_toBottomOf="@id/dateArea"
                app:layout_constraintBottom_toTopOf="@+id/locationArea"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/detail_list_thick_height"
                    android:text="@string/week_achievement_rate"
                    style="@style/DetailTitleStyle"/>

                <TextView
                    android:id="@+id/achievementRate"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/detail_list_thick_height"
                    android:layout_alignParentRight="true"
                    style="@style/DetailTitleStyle"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/detail_list_padding">

                    <TextView
                        android:id="@+id/sun"
                        android:text="@string/sunday"
                        style="@style/DetailDayStyle"/>

                    <TextView
                        android:id="@+id/mon"
                        android:text="@string/monday"
                        style="@style/DetailDayStyle"/>

                    <TextView
                        android:id="@+id/the"
                        android:text="@string/tuesday"
                        style="@style/DetailDayStyle"/>

                    <TextView
                        android:id="@+id/wed"
                        android:text="@string/wednesday"
                        style="@style/DetailDayStyle"/>

                    <TextView
                        android:id="@+id/thu"
                        android:text="@string/thursday"
                        style="@style/DetailDayStyle"/>

                    <TextView
                        android:id="@+id/fri"
                        android:text="@string/friday"
                        android:background="@drawable/achievement_false"
                        style="@style/DetailDayStyle"/>

                    <TextView
                        android:id="@+id/sat"
                        android:text="@string/saturday"
                        style="@style/DetailDayStyle"/>
                </LinearLayout>


            </RelativeLayout>




            <LinearLayout
                android:id="@+id/locationArea"
                android:layout_width="match_parent"
                android:layout_height="390dp"
                android:orientation="vertical"
                android:padding="@dimen/detail_list_padding"
                style="@style/DetailListStyle"
                app:layout_constraintTop_toBottomOf="@id/achievementRateArea"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/detail_list_thick_height"
                    android:text="@string/location"
                    style="@style/DetailTitleStyle" />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="서울 강남구 강남대로 지하 396" />

                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp">
                    <RelativeLayout
                        android:id="@+id/map_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="20dp"/>
                </RelativeLayout>

            </LinearLayout> <!-- end locationArea-->

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
